<resources>
    <string name="app_name">Foreground</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Foreground Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="delete">Delete</string>
    <string name="complete">Mark Completed</string>
    <string name="save">Save</string>
    <string name="select_filter_type">Select Filter Type</string>
    <string name="add_a_filter">Add a filter</string>
    <string name="filter_add_warning">Please fill out all fields before adding.</string>
    <string name="filter_warning_already_added">This filter is already present.</string>
    <string name="filter_parameter_hint_enabled">Filter Parameter</string>
    <string name="filter_parameter_hint_disabled">N/A</string>
    <string name="undo_changes">Undo changes since last sync</string>
    <string name="server_address">Server Address</string>
    <string name="port">Port</string>
    <string name="user_credentials_organization_user_key">User Credentials organization/user/key</string>
    <string name="ca_certificate">CA Certificate</string>
    <string name="private_key_file">Private Key File</string>
    <string name="private_certificate">Private Certificate</string>
    <string name="attribution">The Foreground logo is a modified version of an icon created by monkik from flaticon.\nThanks to aaschmid for their taskwarrior-java-client, which is licensed under the Apache License 2.0.</string>
    <string name="license">This app is licensed under the Apache License 2.0. Full terms of the license are available at https://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="legal">Legal</string>
    <string name="credits">Credits</string>
    <string name="sync_warning">Taskwarrior sync functionality is currently in beta. Despite the authors\' best efforts, your task list could be corrupted or otherwise lost. The authors are not responsible for any losses incurred.</string>
    <string name="warning">Warning: Beta Feature</string>
    <string name="accept">Accept</string>
    <string name="go_back">Go Back</string>
    <string name="taskwarrior_sync">Taskwarrior Sync (Beta)</string>
    <string name="auto_sync_requirement">You must enable sync first.</string>
    <string name="sync_enabled_message">Sync enabled successfully!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="notification_permission_dialog_title">Allow task due reminders?</string>
    <string name="notification_permission_dialog_body">Foreground uses the Notification and Reminder permissions to send timely task due reminders.\n\n
        Denying notifications will prevent notifications, while denying reminders may cause late notifications.</string>
</resources>
