<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_parent"
    android:theme="@style/AppTheme"
    tools:context=".settings.SettingsActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="24sp"
        android:text="@string/taskwarrior_sync" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="6dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Switch
                    android:id="@+id/settings_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:switchPadding="4dp"
                    android:layout_gravity="center_vertical"

                    tools:checked="true" />

                <TextView
                    android:id="@+id/settings_enable_sync_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enable Sync"
                    android:padding="8dp"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:id="@+id/settings_syncprogress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Switch
                    android:id="@+id/settings_auto_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:switchPadding="2dp"
                    android:layout_gravity="center_vertical"
                    tools:checked="true" />

                <TextView
                    android:id="@+id/settings_auto_sync_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Auto sync every"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/settings_auto_sync_interval"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:hint="interval"
                    android:text="60"
                    android:padding="8dp"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/settings_auto_sync_interval_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="minutes"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Get this info from your Taskwarrior Server (inthe.am, freecinc, taskd)" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/settings_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/server_address"
                        android:inputType="textUri"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        tools:layout_editor_absoluteX="116dp"
                        tools:layout_editor_absoluteY="51dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/settings_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/port"
                        android:inputType="number"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_credentials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_credentials_organization_user_key"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"  />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/settings_cert_ca"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ca_certificate"
                            android:focusableInTouchMode="false"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:clickable="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/settings_cert_ca_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_folder_black_24dp"
                        android:clickable="false"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/settings_private_key"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/private_key_file"
                            android:focusableInTouchMode="false"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:clickable="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/settings_private_key_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_folder_black_24dp"
                        android:clickable="false"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/settings_cert_private"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/private_certificate"
                            android:focusableInTouchMode="false"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:clickable="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/settings_cert_private_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_folder_black_24dp"
                        android:clickable="false"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:text="General" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/credits" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/attribution" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/legal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:text="@string/license" />


</LinearLayout>
</ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



