<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".tasklist.MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/task_detail_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom = "10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Description (Required)"
                    android:layout_marginBottom="4dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/date_layout" android:id="@+id/detail_dueDate" > </include>
            <include layout="@layout/date_layout" android:id="@+id/detail_waitDate" > </include>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom = "10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detail_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Project"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tags" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tags_chipgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <EditText
                android:id="@+id/detail_newTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="new tag"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Priority"
                style="@style/InputLabel" />

            <Spinner
                android:spinnerMode="dialog"
                android:id="@+id/detail_priority"
                android:layout_width="wrap_content"
                android:layout_height="42sp"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Custom Attributes"
                            android:textSize="18sp"
                            android:layout_marginEnd="16dp"
                            android:id="@+id/user_attributes_text" />
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_playlist_add_white_24dp"
                            android:contentDescription="Add Custom Attribute"
                            android:id="@+id/add_user_attribute"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        android:id="@+id/user_attribute_list" >
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/action_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="2dp"
            app:icon="@drawable/ic_delete_black_24dp"
            android:textColor="#FFFFFF"
            app:iconTint="#FFFFFF"
            android:text="@string/delete" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:id="@+id/action_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_check_black_24dp"
            android:textColor="#FFFFFF"
            app:iconTint="#FFFFFF"
            android:text="@string/complete"
            android:layout_margin="2dp"
            android:layout_gravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_save"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="2dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            app:icon="@drawable/ic_baseline_description_24"
            app:iconTint="#FFFFFF" />

    </LinearLayout>

</LinearLayout>





